@@ -27,6 +27,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.http.HttpStatus;
@@ -36,9 +37,9 @@ import org.opengroup.osdu.core.common.model.storage.DatastoreQueryResult;
 import org.opengroup.osdu.core.common.model.storage.RecordMetadata;
 import org.opengroup.osdu.core.common.model.storage.RecordState;
 import org.opengroup.osdu.core.common.model.tenant.TenantInfo;
+import org.opengroup.osdu.core.common.util.CollaborationContextUtil;
 import org.opengroup.osdu.core.osm.core.model.Destination;
 import org.opengroup.osdu.core.osm.core.model.Namespace;
-import org.opengroup.osdu.core.osm.core.model.aggregation.Aggregation;
 import org.opengroup.osdu.core.osm.core.model.aggregation.Count;
 import org.opengroup.osdu.core.osm.core.model.order.OrderBy;
 import org.opengroup.osdu.core.osm.core.model.query.GetQuery;
@@ -49,7 +50,6 @@ import org.opengroup.osdu.storage.model.RecordId;
 import org.opengroup.osdu.storage.model.RecordIdAndKind;
 import org.opengroup.osdu.storage.model.RecordInfoQueryResult;
 import org.opengroup.osdu.storage.provider.interfaces.IQueryRepository;
-import org.opengroup.osdu.storage.service.SchemaService;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Repository;
 
@@ -61,7 +61,6 @@ public class OsmQueryRepository implements IQueryRepository {
 
   private final Context context;
   private final TenantInfo tenantInfo;
-  private final SchemaService schemaService;
 
   @Override
   public DatastoreQueryResult getAllKinds(Integer limit, String cursor) {
@@ -95,7 +94,20 @@ public class OsmQueryRepository implements IQueryRepository {
             .getViewResults(
                 q, null, getLimitTuned(limit), Collections.singletonList(ID), false, cursor)
             .outcome();
-    List<String> result = out.getList().stream().map(e -> (String) e.get(ID)).toList();
+    List<String> result = out.getList().stream().map(e -> (String) e.get(ID)).collect(Collectors.toList());
+
+    if (collaborationContext.isPresent()) {
+        String namespace = CollaborationContextUtil.getNamespace(collaborationContext);
+        result = result.stream()
+            .filter(id -> id.startsWith(namespace))
+            .map(id -> CollaborationContextUtil.getIdWithoutNamespace(id, collaborationContext))
+            .collect(Collectors.toList());
+    } else {
+        result = result.stream()
+            .filter(id -> !hasCollaborationPrefix(id))
+            .collect(Collectors.toList());
+    }
+
     String nextCursor = out.getPointer();
     if(result.isEmpty()){
       nextCursor = null;
@@ -223,5 +235,20 @@ public class OsmQueryRepository implements IQueryRepository {
         .namespace(new Namespace(tenantInfo.getName()))
         .kind(RECORD_KIND)
         .build();
+  }
+
+  /**
+   * Checks if ID has a collaboration context UUID prefix (UUID:originalId format).
+   */
+  private boolean hasCollaborationPrefix(String id) {
+    if (id == null || id.length() < 36) {
+      return false;
+    }
+    try {
+      java.util.UUID.fromString(id.substring(0, 36));
+      return true;
+    } catch (IllegalArgumentException e) {
+      return false;
+    }
   }
 }
